Fixing spacing & adding default values

--- a/src/components/FloatingCard.scss
+++ b/src/components/FloatingCard.scss
@@ -128,12 +128,13 @@
       box-shadow: $box-shadow;
     }
     &__text {
-      padding: 2rem 1rem 1rem 1rem;
+      padding: 2rem 1rem 0 1rem;
       margin: 0;
     }
     &__link {
       display: block;
       margin: auto;
+      margin-top: 1rem;
       border: none;
       
       width: 2.5rem;
